# Jackal

./: .gitignore  CMakeLists.txt
current_version/: game.h  player_client.cpp  server.cpp  socket.h  viewer_client.h
current_version/GL files/: Readme.txt
current_version/tester/: tester.cpp  viewer_client.h
player_client/: player_client.cpp
server/: server.cpp
viewer_client/: viewer_client.cpp  viewer_client.h
viewer_client/GL files/: Readme.txt
viewer_client/glut for VS/: Readme.txt
